--- a/src/assets/styles/components/Menu.scss
+++ b/src/assets/styles/components/Menu.scss
@@ -6,6 +6,7 @@
   align-items: center;
   background-color: var(--var-terceary-color);
   box-shadow: 0px 0px 1px rgba($color: #000000, $alpha: 1);
+  text-decoration: none;
   img {
     width: 140px;
     height: 35px;
