--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
 
 :root {
   --var-primary-color: #ec6500;
-  --var-secondary-color:#3a3939;
+  --var-secondary-color: #3a3939;
   --var-terceary-color: white;
+  --ssm: 12px;
+  --sm: 14px;
+  --md: 16px;
+  --lg: 18px;
 }
 
-html{
+html {
   font-size: 62.5%;
 }
 body {
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
