se adiciona la error page

--- a/src/assets/styles/components/CharacterCard.scss
+++ b/src/assets/styles/components/CharacterCard.scss
@@ -24,7 +24,11 @@
     .Card__info p {
       display: flex;
       justify-content: space-evenly;
-      font-size: var(--ssm);
+      font-size: var(--sm);
+
+      &:last-child {
+        font-size: var(--ssm);
+      }
     }
   }
 }
