ajustes menores resueltos

--- a/src/assets/styles/containers/Contacts.scss
+++ b/src/assets/styles/containers/Contacts.scss
@@ -50,6 +50,10 @@ form {
   }
 }
 
+
+.infoErrorInput{
+  color: var(--var-primary-color);
+}
 .ContactWrap {
   display: flex;
   flex-direction: column;
