--- a/src/assets/styles/pages/Home.scss
+++ b/src/assets/styles/pages/Home.scss
@@ -18,14 +18,19 @@
     transition: 0.3s;
     cursor: pointer;
     text-decoration: none;
+    flex-direction: column;
 
     img {
       width: 100%;
       height: 100px;
     }
+
+    .HomeContainer__Cards--iconList{
+      filter: invert(100%);
+    }
     h1 {
       color: var(--var-terceary-color);
-      font-size: 3rem;
+      font-size: var(--md);
       letter-spacing: 3px;
     }
 
