--- a/src/assets/styles/pages/Home.scss
+++ b/src/assets/styles/pages/Home.scss
@@ -25,7 +25,7 @@
       height: 100px;
     }
 
-    .HomeContainer__Cards--iconList{
+    .HomeContainer__Cards--iconList {
       filter: invert(100%);
     }
     h1 {
@@ -38,6 +38,21 @@
       box-shadow: 0px 0px 7px rgba($color: #000000, $alpha: 1);
       transform: scale(1.05);
       background-color: black;
+    }
+  }
+}
+
+@media (max-width: 900px) {
+  .HomeContainer {
+    grid-template-columns: repeat(1, 250px);
+    margin-top: 50px;
+    margin-bottom: 50px;
+    .HomeContainer__Cards {
+      height: 250px;
+
+      img {
+        height: 70px;
+      }
     }
   }
 }
